practice04 is ready

--- a/practices/practice04.ipynb
+++ b/practices/practice04.ipynb
@@ -72,7 +72,18 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "has_duplicates([1, 2, 1, 3])"
    ]
@@ -81,7 +92,18 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "has_duplicates(['hello', 'hi', 'hey'])"
    ]
@@ -109,7 +131,7 @@
     {
      "data": {
       "text/plain": [
-       "('words.txt', <http.client.HTTPMessage at 0x7fd042f87eb0>)"
+       "('words.txt', <http.client.HTTPMessage at 0x292815f5190>)"
       ]
      },
      "execution_count": 5,
@@ -138,8 +160,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def make_word_list():\n",
-    "    file_open = open('words.txt')   # 파일을 메모리에 불러오기\n",
+    "def make_word_list(file_name):\n",
+    "    file_open = open(file_name)   # 파일을 메모리에 불러오기\n",
     "    \n",
     "    t = []                          # 각각의 줄로 구성된 리스트 생성\n",
     "    for line in file_open:\n",
@@ -162,7 +184,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "words_list = make_word_list()"
+    "words_list = make_word_list('words.txt')"
    ]
   },
   {
@@ -407,6 +429,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "아래에서 정의되는 `binsearch()` 함수는 단순히 `True` 또는 `False`를\n",
+    "반환하는 함수가 아니다.\n",
+    "리스트에서 항목을 찾을 수 있으면 해당 인덱스와 찾을 때까지 걸리는 시간을\n",
+    "while 반복문의 실행횟수로 함께 반환한다.\n",
+    "또한 반환된 인덱스의 값이 -1인 경우 리스트에 존재하지 않음을 의미한다."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
@@ -437,7 +470,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "이진탐색 알고리즘을 사용한 함수가 10배 이상 빠르다."
+    "이진탐색 알고리즘을 사용한 함수가 10배 이상 빠르다.\n",
+    "\n",
+    "__경고:__ 빠른 컴퓨터를 사용하는 경우 이진탐색 알고리즘 실행시간이 0초로 계산될 수 있다."
    ]
   },
   {
@@ -449,9 +484,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "list_elem():\t 0.0014598369598388672 초\n",
-      "binsearch():\t 5.7697296142578125e-05 초\n",
-      "이진탐색 알고리즘이 25배 정도 빠르다.\n"
+      "list_elem():\t 0.0009984970092773438 초\n",
+      "binsearch():\t 0.0 초\n"
      ]
     }
    ],
@@ -470,8 +504,7 @@
     "t = binsearch('python', words_list)\n",
     "elapsed_time_2 = time.time() - start_time\n",
     "\n",
-    "print(\"binsearch():\\t\", elapsed_time_2, '초')\n",
-    "print(f\"이진탐색 알고리즘이 {int(elapsed_time_1/elapsed_time_2)}배 정도 빠르다.\")"
+    "print(\"binsearch():\\t\", elapsed_time_2, '초')"
    ]
   },
   {
@@ -496,19 +529,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# pass와 None을 각각 적절한 명령문과 값으로 대체하라.\n",
-    "\n",
-    "def make_word_dict():\n",
-    "    pass\n",
-    "    return None"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -525,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +573,7 @@
        "113783"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -571,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -591,16 +611,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "list_elem():\t 0.0011649131774902344 초\n",
-      "binsearch():\t 5.817413330078125e-05 초\n",
-      "dict_elem():\t 5.078315734863281e-05 초\n"
+      "list_elem():\t 0.0010001659393310547 초\n",
+      "binsearch():\t 0.0 초\n",
+      "dict_elem():\t 0.0 초\n"
      ]
     }
    ],
